kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: endpoint
  namespace: staging-system
  labels:
    app: endpoint
spec:
  replicas: 1
  template:
    metadata:
      name: endpoint
      labels:
        app: endpoint
    spec:
      imagePullSecrets:
        - name: dockersecret
      containers:
        - name: endpoint
          image: techieiq/endpoint
          imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: endpoint
