kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd2-service
  namespace: staging-system
spec:
  selector:
    app: cicd2
  ports:
    - port: 8080
  type: ClusterIP
