kustomize/base/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: endpoint
spec:
  host: endpoint
  subsets:
    - name: v1
      labels:
        version: v1
