kustomize/base/virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: endpoint
spec:
  hosts:
    - endpoint
  http:
    - route:
        - destination:
            host: endpoint
            subset: v1
